[package]
name = "signcryption"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/Argyle-Software/signcryption" 
authors = ["Mitchell Berry <foss@mitchellberry.com>"]
description = "Library implementing the Toorani-Beheshti signcryption scheme instantiated over Ristretto255 or Ed25519"
documentation = "https://docs.rs/signcryption"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
keywords = ["signcryption", "signature", "signing", "encryption"]

[dependencies]
rand = {version = "0.8.5", features = ["getrandom"]}
libsodium-sys-stable = {version = "1.19.30"}
subtle = "2.5.0"
zeroize = {version = "1.6.0", features = ["zeroize_derive"]}
aes-gcm = {version = "0.10.2", optional = true}

[features]
default = ["signcrypt"]

# Turn off default features if you wish to use another AEAD
signcrypt = ["aes-gcm"]

# Will download and install the latest version of libsodium
# Run this feature once if you don't have it installed
fetch-libsodium = ["libsodium-sys-stable/fetch-latest"]
